lab02/log/build_2024-10-25_16-38-05/lab02_pkg/stdout_stderr.log
running egg_info
writing ../../build/lab02_pkg/lab02_pkg.egg-info/PKG-INFO
writing dependency_links to ../../build/lab02_pkg/lab02_pkg.egg-info/dependency_links.txt
writing entry points to ../../build/lab02_pkg/lab02_pkg.egg-info/entry_points.txt
writing requirements to ../../build/lab02_pkg/lab02_pkg.egg-info/requires.txt
writing top-level names to ../../build/lab02_pkg/lab02_pkg.egg-info/top_level.txt
reading manifest file '../../build/lab02_pkg/lab02_pkg.egg-info/SOURCES.txt'
adding license file 'LICENSE'
writing manifest file '../../build/lab02_pkg/lab02_pkg.egg-info/SOURCES.txt'
running build
running build_py
copying lab02_pkg/controller.py -> /home/lincunha/SESASR/lab02/build/lab02_pkg/build/lib/lab02_pkg
running install
running install_lib
copying /home/lincunha/SESASR/lab02/build/lab02_pkg/build/lib/lab02_pkg/controller.py -> /home/lincunha/SESASR/lab02/install/lab02_pkg/lib/python3.10/site-packages/lab02_pkg
byte-compiling /home/lincunha/SESASR/lab02/install/lab02_pkg/lib/python3.10/site-packages/lab02_pkg/controller.py to controller.cpython-310.pyc
  File "/home/lincunha/SESASR/lab02/install/lab02_pkg/lib/python3.10/site-packages/lab02_pkg/controller.py", line 104
    if msg.ranges[0] > 1
                        ^
SyntaxError: expected ':'

running install_data
running install_egg_info
removing '/home/lincunha/SESASR/lab02/install/lab02_pkg/lib/python3.10/site-packages/lab02_pkg-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/lab02_pkg/lab02_pkg.egg-info to /home/lincunha/SESASR/lab02/install/lab02_pkg/lib/python3.10/site-packages/lab02_pkg-0.0.0-py3.10.egg-info
running install_scripts
Installing controller script to /home/lincunha/SESASR/lab02/install/lab02_pkg/lib/lab02_pkg
Installing listener script to /home/lincunha/SESASR/lab02/install/lab02_pkg/lib/lab02_pkg
Installing talker script to /home/lincunha/SESASR/lab02/install/lab02_pkg/lib/lab02_pkg
writing list of installed files to '/home/lincunha/SESASR/lab02/build/lab02_pkg/install.log'
